--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,21 +12,6 @@ variables:
   tag: '$(Build.BuildId)'
 
 stages:
-- stage: Build
-  displayName: Build image
-  jobs:  
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
 
 - stage: Test
   displayName: Test code
@@ -36,7 +21,6 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-
     - task: SonarQubePrepare@4
       inputs:
         scannerMode: 'CLI'
@@ -49,3 +33,40 @@ stages:
     - task: SonarQubePublish@4
       inputs:
         pollingTimeoutSec: '300'
+
+- stage: Build
+  displayName: Build image
+  jobs:  
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: Docker@2
+      displayName: Build the image
+      inputs:
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(tag)
+    - task: Docker@2
+      displayName: Push the image
+      inputs:
+        containerRegistry: 'Azure Container Registry'
+        repository: 'dummy-nodejs'
+        command: 'push'
+
+- stage: Deploy
+  displayName: Deploy image
+  jobs:  
+  - job: Test
+    displayName: Test
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: oc-cmd@2
+      inputs:
+        connectionType: 'OpenShift Connection Service'
+        openshiftService: 'ARO Cluster - Dev'
+        version: '4.5'
+        cmd: 'oc get nodes'
