--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -43,18 +43,12 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Build the image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
-    - task: Docker@2
-      displayName: Push the image
+      displayName: Build and push the image
       inputs:
         containerRegistry: 'Azure Container Registry'
         repository: 'dummy-nodejs'
-        command: 'push'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
 
 - stage: Deploy
   displayName: Deploy image
