Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,7 +17,7 @@ stages:
   displayName: Test code
   jobs:  
   - job: Test
-    displayName: Test
+    displayName: SonarQube
     pool:
       vmImage: 'ubuntu-latest'
     steps:
@@ -38,7 +38,7 @@ stages:
   displayName: Build image
   jobs:  
   - job: Build
-    displayName: Build
+    displayName: Build and Push
     pool:
       vmImage: 'ubuntu-latest'
     steps:
@@ -54,7 +54,7 @@ stages:
   displayName: Deploy image
   jobs:  
   - job: Deploy
-    displayName: Deploy
+    displayName: Deploy to OpenShift DEV
     pool:
       vmImage: 'ubuntu-latest'
     steps:
@@ -63,3 +63,4 @@ stages:
         connectionType: 'OpenShift Connection Service'
         openshiftService: 'ARO Cluster - Dev'
         cmd: 'oc get nodes'
+
