--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -63,4 +63,8 @@ stages:
         connectionType: 'OpenShift Connection Service'
         openshiftService: 'ARO Cluster - Dev'
         cmd: 'oc import-image  futureretailimageregistry.azurecr.io/dummy-nodejs:$(Build.BuildId)  --confirm -n honda-dev-env'
-
+    - task: oc-cmd@2
+      inputs:
+        connectionType: 'OpenShift Connection Service'
+        openshiftService: 'ARO Cluster - Dev'
+        cmd: 'oc tag honda-dev-env/dummy-nodejs:$(Build.BuildId) honda-dev-env/dummy-nodejs:latest'
