--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -61,8 +61,8 @@ stages:
     - task: oc-cmd@2
       inputs:
         connectionType: 'OpenShift Connection Service'
-        openshiftService: 'ARO Cluster - Dev'
-        cmd: 'oc import-image  futureretailimageregistry.azurecr.io/dummy-nodejs:$(Build.BuildId)  --confirm -n honda-dev-env'
+        openshiftService: 'ARO Cluster - Dev'        
+        cmd: 'oc tag futureretailimageregistry.azurecr.io/dummy-nodejs:$(Build.BuildId) dummy-nodejs:latest -n honda-dev-env'
     - task: oc-cmd@2
       inputs:
         connectionType: 'OpenShift Connection Service'
